--- a/tools/packaging/windows/RenodeSetup/Product.wxs
+++ b/tools/packaging/windows/RenodeSetup/Product.wxs
@@ -41,7 +41,7 @@
 
     <DirectoryRef Id="ApplicationProgramsFolder">
       <Component Id="ApplicationShortcut" Guid="674dc986-f515-4abd-b191-7ee813bd29b5">
-        <Condition>MENUSTARTSHORTCUT</Condition>
+        <Condition>STARTMENUSHORTCUT</Condition>
         <Shortcut Id="ApplicationStartMenuShortcut" Name="Renode" Description="Renode" Target="[INSTALLDIR]bin\Renode.exe" WorkingDirectory="INSTALLDIR" Icon="RenodeNoBg.ico"/>
         <RemoveFolder Id="CleanUpShortCut" Directory="ApplicationProgramsFolder" On="uninstall"/>
         <RegistryValue Root="HKCU" Key="Software\Renode" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
